add .java-version to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,6 @@ $RECYCLE.BIN/
 
 # Ignore all files in root that are not explicitly needed
 # (But we still want pom.xml, README, LICENSE, etc.)
+
+# Others
+.java-version
